--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">PoolCar</string>
     <string name="title_activity_conductor_map_acrivity">Map</string>
-    <string name="google_maps_key">AIzaSyAa66qreGPji58op42F7_ufelBteQxWarg</string>
+    <string name="google_key">AIzaSyAa66qreGPji58op42F7_ufelBteQxWarg</string>
 </resources>
